# 2021-12-22-File-Renamer

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  readme.typ  requirements.txt
.github/workflows/: on tag deploy on Github.yaml  on-tag-create-release.yaml
config/: format conversion.csv
src/: main.py
